pruebaPackage/objects/Tabla_de_Precios__c.object
<CustomObject>
    <fields>
        <fullName>Comision__c</fullName>
        <inlineHelpText>Indicar la comisión por defecto a cargar para la combinación de Producto y Soporte.</inlineHelpText>
        <label>Comision</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Maximo__c</fullName>
        <inlineHelpText>Indica el % máximo a aplicar sin requerir una Aprobación del Manager Comercial</inlineHelpText>
        <label>Descuento Maximo</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gestion__c</fullName>
        <label>Gestión</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>MID-MARKET</fullName>
                </value>
                <value>
                    <fullName>LARGE ACCOUNT</fullName>
                </value>
                <value>
                    <fullName>PUBLIC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limite_Aprobacion__c</fullName>
        <formula>(1- Descuento_Maximo__c ) *  Comision__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calcula la comisión minina que no requiere aprobación de manager comercial</inlineHelpText>
        <label>Límite Aprobación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <formula>Producto__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProductCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Tablas de Precios</relationshipLabel>
        <relationshipName>Tablas_de_Precios</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>